KAFKA-20993: fix review items